--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,18 @@
 {
-    "emmet.includeLanguages": {
-        "javascript": "javascriptreact"
-    }
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
+  "prettier.semi": false,
+
+  "workbench.colorCustomizations": {
+    "titleBar.activeForeground": "#ffffff",
+    "titleBar.inactiveForeground": "#ffffffcc",
+    "titleBar.activeBackground": "#1903e0",
+    "titleBar.inactiveBackground": "#1903e0CC"
+  },
+  "editor.tabSize": 2
 }
