--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,10 +9,10 @@
   "prettier.semi": false,
 
   "workbench.colorCustomizations": {
-    "titleBar.activeForeground": "#ffffff",
-    "titleBar.inactiveForeground": "#ffffffcc",
-    "titleBar.activeBackground": "#1903e0",
-    "titleBar.inactiveBackground": "#1903e0CC"
+    "titleBar.activeForeground": "#000000",
+    "titleBar.inactiveForeground": "#000000CC",
+    "titleBar.activeBackground": "#e0bf03",
+    "titleBar.inactiveBackground": "#e0bf03CC"
   },
   "editor.tabSize": 2
 }
